<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainFragment"
    android:orientation="vertical"
    android:id="@+id/mainFragmentID"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/starry_night">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="5dp"
            android:rotation="-15"
            android:src="@drawable/icon"
            android:contentDescription="@string/app_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="65dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/nunitosans_blackitalic"
            android:text="@string/myrhythm"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/greetingsLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="215dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/greeting_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/foggy_orange"
                    android:fontFamily="@font/nunitosans_extrabold"
                    android:text="@string/good_morning_runner"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/motivation_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text=""
                    android:textColor="@color/starry_night"
                    android:fontFamily="@font/nunitosans_semibold"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <HorizontalScrollView
                android:id="@+id/badge_sv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/badge_lv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/badge1"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        app:lottie_rawRes="@raw/badge1" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/badge2"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:scaleX="1.3"
                        android:scaleY="1.3"
                        app:lottie_rawRes="@raw/badge2" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/badge3"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:scaleX="1.3"
                        android:scaleY="1.3"
                        app:lottie_rawRes="@raw/badge3" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/badge4"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:scaleX="1.3"
                        android:scaleY="1.3"
                        app:lottie_rawRes="@raw/badge4" />
                </LinearLayout>

            </HorizontalScrollView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunitosans_semibold"
                android:textAlignment="center"
                android:text="@string/slide_me_for_badges"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/weatherLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:elevation="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">


                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottie_island"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    app:lottie_rawRes="@raw/island"
                    android:repeatCount="infinite"
                    android:repeatMode="restart"
                    android:scaleX="1"
                    android:scaleY="1"/>

                <TextView
                    android:id="@+id/weatherLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/nunitosans_bold"
                    android:textColor="@color/starry_night"
                    android:layout_marginStart="6dp"></TextView>
            </LinearLayout>

            <Button
                android:id="@+id/getWeather_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/update_weather"
                android:fontFamily="@font/nunitosans_bold"
                android:backgroundTint="@color/ginger_yellow"
                android:textColor="@color/starry_night"
                android:textSize="11sp"
                app:strokeColor="@color/starry_night"
                app:strokeWidth="2dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/description_tv"
                android:fontFamily="@font/nunitosans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="@color/starry_night"
                android:layout_marginTop="15dp"
                android:text="@string/description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/temperatureTitle"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/starry_night"
                    android:fontFamily="@font/nunitosans_regular"
                    android:text="@string/temperature" />

                <TextView
                    android:id="@id/temperature_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/starry_night"
                    android:fontFamily="@font/nunitosans_regular"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/humidityTitle"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/starry_night"
                    android:fontFamily="@font/nunitosans_regular"
                    android:text="@string/humidity" />

                <TextView
                    android:id="@+id/humidity_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/starry_night"
                    android:fontFamily="@font/nunitosans_regular"
                    android:text="" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_running"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:lottie_rawRes="@raw/running"
            android:repeatCount="infinite"
            android:repeatMode="restart"
            android:scaleX="1.3"
            android:scaleY="1.3"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/myBPMLayout"
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:elevation="5dp"
            android:background="@drawable/section_background_orange">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/starry_night"
                android:layout_gravity="center_horizontal"
                android:text="@string/your_bpm"
                android:fontFamily="@font/nunitosans_bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:id="@+id/lottie_heartbeat"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:repeatCount="infinite"
                    app:lottie_rawRes="@raw/heartbeat_bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/myBPM_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="@color/starry_night"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/nunitosans_semibold"
                android:textSize="18sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_bpm"
                android:textSize="11sp"
                android:fontFamily="@font/nunitosans_bold"
                android:backgroundTint="@color/starry_night"
                android:textColor="@color/milky_white"
                android:layout_gravity="center_horizontal"
                android:id="@+id/getBPM_btn"
                android:layout_marginTop="5dp"
                app:strokeWidth="2dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@id/musicInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical"
            android:elevation="5dp"
            android:background="@drawable/section_background_outline_blue">

            <TextView
                android:id="@+id/musicInfo"
                android:textColor="@color/starry_night"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:text="@string/music_info"
                android:fontFamily="@font/nunitosans_bold"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/musicTitle_tv"
                android:textColor="@color/starry_night"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit ="marquee_forever"
                android:layout_marginTop="11dp"
                android:textSize="16sp"
                android:text="@string/no_song_is_playing"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:scrollHorizontally="true"
                android:textAlignment="center"
                android:fontFamily="@font/nunitosans_semibold"
                android:scrollbars="horizontal"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/musicArtist_tv"
                android:textColor="@color/starry_night"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:scrollbars="horizontal"
                android:fontFamily="@font/nunitosans_semibold"
                android:text=""
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/musicBPM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textColor="@color/starry_night"
                android:fontFamily="@font/nunitosans_semibold"
                android:text=""
                android:textSize="16sp" />


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/likeSongButton"
                android:layout_width="40dp"
                android:layout_height="42dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:scaleX="2"
                android:scaleY="2"
                app:lottie_rawRes="@raw/like"
                android:layout_gravity="end"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>