<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".AboutMeFragment"
    android:id="@+id/aboutMeFragmentID">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/starry_night">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="5dp"
            android:rotation="-15"
            android:src="@drawable/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="65dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/nunitosans_blackitalic"
            android:text="@string/myrhythm"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="Me"
        android:fontFamily="@font/nunitosans_bold"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/starry_night"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/likedSongs_btn"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/liked_songs"
        android:fontFamily="@font/nunitosans_bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/starry_night"
        android:backgroundTint="@color/white"
        app:strokeColor="@color/starry_night"
        app:strokeWidth="2dp"/>

    <Button
        android:id="@+id/setting_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:fontFamily="@font/nunitosans_bold"
        android:text="@string/setting"
        android:layout_marginTop="20dp"
        android:textColor="@color/starry_night"
        android:backgroundTint="@color/white"
        app:strokeColor="@color/starry_night"
        app:strokeWidth="2dp"/>

    <Button
        android:id="@+id/privacy_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:fontFamily="@font/nunitosans_bold"
        android:text="Privacy"
        android:layout_marginTop="20dp"
        android:textColor="@color/starry_night"
        android:backgroundTint="@color/white"
        app:strokeColor="@color/starry_night"
        app:strokeWidth="2dp"/>

    <Button
        android:id="@+id/signOut_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:fontFamily="@font/nunitosans_bold"
        android:text="Logout"
        android:layout_marginTop="20dp"
        android:textColor="@color/starry_night"
        android:backgroundTint="@color/white"
        app:strokeColor="@color/starry_night"
        app:strokeWidth="2dp"/>




</LinearLayout>